src/_static.mojo


# @always_inline
# fn font_options_equal(options: UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin], other: UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]) -> cairo_bool_t:
#     return external_call["cairo_font_options_equal", cairo_bool_t, UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin], UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]](options, other)

# @always_inline
# fn font_options_hash(options: UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]) -> c_ulong:
#     return external_call["cairo_font_options_hash", c_ulong, UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]](options)

# @always_inline
# fn font_options_set_antialias(options: UnsafePointer[__CairoFontOptionsT, MutExternalOrigin], antialias: c_int) -> NoneType:
#     return external_call["cairo_font_options_set_antialias", NoneType, UnsafePointer[__CairoFontOptionsT, MutExternalOrigin], c_int](options, antialias)

# @always_inline
# fn font_options_get_antialias(options: UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]) -> c_int:
#     return external_call["cairo_font_options_get_antialias", c_int, UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]](options)

# @always_inline
# fn font_options_set_subpixel_order(options: UnsafePointer[__CairoFontOptionsT, MutExternalOrigin], subpixel_order: c_int) -> NoneType:
#     return external_call["cairo_font_options_set_subpixel_order", NoneType, UnsafePointer[__CairoFontOptionsT, MutExternalOrigin], c_int](options, subpixel_order)

# @always_inline
# fn font_options_get_subpixel_order(options: UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]) -> c_int:
#     return external_call["cairo_font_options_get_subpixel_order", c_int, UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]](options)

# @always_inline
# fn font_options_set_hint_style(options: UnsafePointer[__CairoFontOptionsT, MutExternalOrigin], hint_style: c_int) -> NoneType:
#     return external_call["cairo_font_options_set_hint_style", NoneType, UnsafePointer[__CairoFontOptionsT, MutExternalOrigin], c_int](options, hint_style)

# @always_inline
# fn font_options_get_hint_style(options: UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]) -> c_int:
#     return external_call["cairo_font_options_get_hint_style", c_int, UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]](options)

# @always_inline
# fn font_options_set_hint_metrics(options: UnsafePointer[__CairoFontOptionsT, MutExternalOrigin], hint_metrics: c_int) -> NoneType:
#     return external_call["cairo_font_options_set_hint_metrics", NoneType, UnsafePointer[__CairoFontOptionsT, MutExternalOrigin], c_int](options, hint_metrics)

# @always_inline
# fn font_options_get_hint_metrics(options: UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]) -> c_int:
#     return external_call["cairo_font_options_get_hint_metrics", c_int, UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]](options)

# @always_inline
# fn font_options_get_variations(options: UnsafePointer[__CairoFontOptionsT, MutExternalOrigin]) -> UnsafePointer[c_char, ImmutExternalOrigin]:
#     return external_call["cairo_font_options_get_variations", UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[__CairoFontOptionsT, MutExternalOrigin]](options)

# @always_inline
# fn font_options_set_variations(options: UnsafePointer[__CairoFontOptionsT, MutExternalOrigin], variations: UnsafePointer[c_char, ImmutExternalOrigin]) -> NoneType:
#     return external_call["cairo_font_options_set_variations", NoneType, UnsafePointer[__CairoFontOptionsT, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin]](options, variations)

# @always_inline
# fn font_options_set_color_mode(options: UnsafePointer[__CairoFontOptionsT, MutExternalOrigin], color_mode: c_int) -> NoneType:
#     return external_call["cairo_font_options_set_color_mode", NoneType, UnsafePointer[__CairoFontOptionsT, MutExternalOrigin], c_int](options, color_mode)

# @always_inline
# fn font_options_get_color_mode(options: UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]) -> c_int:
#     return external_call["cairo_font_options_get_color_mode", c_int, UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]](options)

# @always_inline
# fn font_options_get_color_palette(options: UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]) -> c_uint:
#     return external_call["cairo_font_options_get_color_palette", c_uint, UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]](options)

# @always_inline
# fn font_options_set_color_palette(options: UnsafePointer[__CairoFontOptionsT, MutExternalOrigin], palette_index: c_uint) -> NoneType:
#     return external_call["cairo_font_options_set_color_palette", NoneType, UnsafePointer[__CairoFontOptionsT, MutExternalOrigin], c_uint](options, palette_index)

# @always_inline
# fn font_options_set_custom_palette_color(options: UnsafePointer[__CairoFontOptionsT, MutExternalOrigin], index: c_uint, red: c_double, green: c_double, blue: c_double, alpha: c_double) -> NoneType:
#     return external_call["cairo_font_options_set_custom_palette_color", NoneType, UnsafePointer[__CairoFontOptionsT, MutExternalOrigin], c_uint, c_double, c_double, c_double, c_double](options, index, red, green, blue, alpha)

# @always_inline
# fn font_options_get_custom_palette_color(options: UnsafePointer[__CairoFontOptionsT, MutExternalOrigin], index: c_uint, red: UnsafePointer[c_double, MutExternalOrigin], green: UnsafePointer[c_double, MutExternalOrigin], blue: UnsafePointer[c_double, MutExternalOrigin], alpha: UnsafePointer[c_double, MutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_font_options_get_custom_palette_color", c_int, UnsafePointer[__CairoFontOptionsT, MutExternalOrigin], c_uint, UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](options, index, red, green, blue, alpha))

# @always_inline
# fn select_font_face(cr: UnsafePointer[__CairoT, MutExternalOrigin], family: UnsafePointer[c_char, ImmutExternalOrigin], slant: cairo_font_slant_t, weight: cairo_font_weight_t) -> NoneType:
#     return external_call["cairo_select_font_face", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], c_int, c_int](cr, family, slant.value, weight.value)

# @always_inline
# fn set_font_size(cr: UnsafePointer[__CairoT, MutExternalOrigin], size: c_double) -> NoneType:
#     return external_call["cairo_set_font_size", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_double](cr, size)

# @always_inline
# fn set_font_matrix(cr: UnsafePointer[__CairoT, MutExternalOrigin], matrix: UnsafePointer[__CairoMatrixT, ImmutExternalOrigin]) -> NoneType:
#     return external_call["cairo_set_font_matrix", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[__CairoMatrixT, ImmutExternalOrigin]](cr, matrix)

# @always_inline
# fn get_font_matrix(cr: UnsafePointer[__CairoT, MutExternalOrigin], matrix: UnsafePointer[__CairoMatrixT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_get_font_matrix", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[__CairoMatrixT, MutExternalOrigin]](cr, matrix)

# @always_inline
# fn set_font_options(cr: UnsafePointer[__CairoT, MutExternalOrigin], options: UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]) -> NoneType:
#     return external_call["cairo_set_font_options", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]](cr, options)

# @always_inline
# fn get_font_options(cr: UnsafePointer[__CairoT, MutExternalOrigin], options: UnsafePointer[__CairoFontOptionsT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_get_font_options", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[__CairoFontOptionsT, MutExternalOrigin]](cr, options)

# @always_inline
# fn set_font_face(cr: UnsafePointer[__CairoT, MutExternalOrigin], font_face: UnsafePointer[__CairoFontFaceT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_set_font_face", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[__CairoFontFaceT, MutExternalOrigin]](cr, font_face)

# @always_inline
# fn get_font_face(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> UnsafePointer[__CairoFontFaceT, MutExternalOrigin]:
#     return external_call["cairo_get_font_face", UnsafePointer[__CairoFontFaceT, MutExternalOrigin], UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn set_scaled_font(cr: UnsafePointer[__CairoT, MutExternalOrigin], scaled_font: UnsafePointer[__CairoScaledFontT, ImmutExternalOrigin]) -> NoneType:
#     return external_call["cairo_set_scaled_font", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[__CairoScaledFontT, ImmutExternalOrigin]](cr, scaled_font)

# @always_inline
# fn get_scaled_font(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> UnsafePointer[__CairoScaledFontT, MutExternalOrigin]:
#     return external_call["cairo_get_scaled_font", UnsafePointer[__CairoScaledFontT, MutExternalOrigin], UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn show_text(cr: UnsafePointer[__CairoT, MutExternalOrigin], utf8: UnsafePointer[c_char, ImmutExternalOrigin]) -> NoneType:
#     return external_call["cairo_show_text", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin]](cr, utf8)

# @always_inline
# fn show_glyphs(cr: UnsafePointer[__CairoT, MutExternalOrigin], glyphs: UnsafePointer[__CairoGlyphT, ImmutExternalOrigin], num_glyphs: c_int) -> NoneType:
#     return external_call["cairo_show_glyphs", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[__CairoGlyphT, ImmutExternalOrigin], c_int](cr, glyphs, num_glyphs)

# @always_inline
# fn show_text_glyphs(cr: UnsafePointer[__CairoT, MutExternalOrigin], utf8: UnsafePointer[c_char, ImmutExternalOrigin], utf8_len: c_int, glyphs: UnsafePointer[__CairoGlyphT, ImmutExternalOrigin], num_glyphs: c_int, clusters: UnsafePointer[__CairoTextClusterT, ImmutExternalOrigin], num_clusters: c_int, cluster_flags: c_int) -> NoneType:
#     return external_call["cairo_show_text_glyphs", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], c_int, UnsafePointer[__CairoGlyphT, ImmutExternalOrigin], c_int, UnsafePointer[__CairoTextClusterT, ImmutExternalOrigin], c_int, c_int](cr, utf8, utf8_len, glyphs, num_glyphs, clusters, num_clusters, cluster_flags)

# @always_inline
# fn text_path(cr: UnsafePointer[__CairoT, MutExternalOrigin], utf8: UnsafePointer[c_char, ImmutExternalOrigin]) -> NoneType:
#     return external_call["cairo_text_path", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin]](cr, utf8)

# @always_inline
# fn glyph_path(cr: UnsafePointer[__CairoT, MutExternalOrigin], glyphs: UnsafePointer[__CairoGlyphT, ImmutExternalOrigin], num_glyphs: c_int) -> NoneType:
#     return external_call["cairo_glyph_path", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[__CairoGlyphT, ImmutExternalOrigin], c_int](cr, glyphs, num_glyphs)

# @always_inline
# fn text_extents(cr: UnsafePointer[__CairoT, MutExternalOrigin], utf8: UnsafePointer[c_char, ImmutExternalOrigin], extents: UnsafePointer[__CairoTextExtentsT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_text_extents", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[__CairoTextExtentsT, MutExternalOrigin]](cr, utf8, extents)
